<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baptiste.cigarrete.Inscription"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/header"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30dp"
            android:text="@string/subscription"
            android:layout_marginBottom="15sp"
            android:layout_marginTop="15sp"/>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:background="@color/blue2">
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Prenom"
            android:gravity="right"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="22sp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:layout_marginTop="15dp"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/ETPrenom"
            android:layout_marginLeft="5dp"
            android:layout_row="1"
            android:layout_column="2"
            style="@style/EditTextWhite"
            android:background="@color/white"
            android:layout_marginBottom="25dp"/>
            />
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nom"
            android:layout_weight="1"
            android:textSize="22sp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/ETNom"
            android:background="@color/white"
            android:layout_marginLeft="5dp"

            android:layout_row="2"
            android:layout_column="2"
            style="@style/EditTextWhite"
            android:layout_marginBottom="25dp"/>


        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cig_moy"
            android:textSize="22sp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/ETNCigMoy"
            android:layout_marginLeft="5dp"
            android:layout_row="3"
            android:background="@color/white"
            android:layout_column="2"
            style="@style/EditTextWhite"
            android:layout_marginBottom="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:textSize="22sp"
            android:text="@string/Prix_Paq"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginLeft="10dp"
            android:id="@+id/PrixPaquet"
            android:layout_column="2"
            android:layout_row="4"
            android:background="@color/white"
            style="@style/EditTextWhite"
            android:layout_marginBottom="25dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/cig_paquet"
            android:textSize="22sp"
            android:layout_marginBottom="25dp"/>
        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/ETCigPaq"
            android:layout_marginLeft="10dp"
            android:layout_column="2"
            android:layout_row="5"
            android:inputType="number"
            style="@style/EditTextWhite"
            android:background="@color/white"
            android:layout_marginBottom="25dp"/>
    </GridLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BElectric">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="Valider"
            android:textColor="@color/white"
            android:text="@string/Valider"/>
    </LinearLayout>

</LinearLayout>
