<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/header">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hi"
            android:textSize="25dp" />
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:id="@+id/TVName"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_with_smoke"
            android:textSize="17dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:id="@+id/TVDWithoutSmok"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cig_no_smoke"
            android:textSize="17dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:id="@+id/TxtCigNoSmoke"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eco"
            android:textSize="17dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:id="@+id/TxtMoneyEco"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:onClick="">
        <TableRow>
            <LinearLayout android:orientation="vertical"
                android:layout_height="100dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:layout_column="1"
                android:onClick="onConsoClick">
                <ImageView
                    android:layout_marginTop="15dp"
                    android:layout_height="70dp"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/inscrir"
                    android:layout_gravity="center"/>
                <TextView android:layout_column="1"
                    android:text="@string/consToday"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout android:orientation="vertical"
                android:layout_height="150dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/BElectric"
                android:layout_column="1"
                android:onClick="onMonitoringClick">
                <ImageView
                    android:layout_height="70dp"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/suivi"
                    android:layout_gravity="center"/>
                <TextView android:layout_column="1"
                    android:text="@string/suivi"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"

                    />
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
            android:layout_height="150dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/blue2"
            android:layout_column="1"
                android:onClick="onSanteClick">
            <ImageView
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:src="@drawable/sante"
                android:layout_gravity="center"/>
            <TextView android:layout_column="1"
                android:text="@string/health"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                />
            </LinearLayout>

        </TableRow>
        <TableRow>
            <LinearLayout android:orientation="vertical"
                android:layout_height="150dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/blue3"
                android:layout_column="1"
                android:onClick="onRecClick">
                <ImageView
                    android:layout_height="70dp"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/recompense"
                    android:layout_gravity="center"/>
                <TextView android:layout_column="1"
                    android:text="@string/recompense"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                android:layout_height="150dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/bClaire"
                android:layout_column="1"
                android:onClick="onAdviceClick">
                <ImageView
                    android:layout_height="70dp"
                    android:layout_width="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/conseil"
                    android:layout_gravity="center"/>
                <TextView android:layout_column="1"
                    android:text="@string/conseil"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"

                    />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
</ScrollView>
