<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baptiste.cigarrete.Conseil"
    android:orientation="vertical"
    android:background="@color/blue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/header">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conseil"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"/>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <LinearLayout android:orientation="vertical"
                android:layout_height="150dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/BElectric"
                android:layout_column="1"
                android:onClick="BtnGout">
            <ImageView
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:src="@drawable/flavours"
                android:layout_gravity="center"/>
            <TextView android:layout_column="1"
                android:text="@string/title_activity_conseil__gout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                />
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                android:layout_height="150dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/blue2"
                android:layout_column="1"
                android:onClick="BtnGeste">
            <ImageView
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:src="@drawable/geste"
                android:layout_gravity="center"/>
            <TextView android:layout_column="1"
                android:text="@string/title_activity_conseil__geste"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <LinearLayout android:orientation="vertical"
                android:layout_height="150dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/blue3"
                android:layout_column="1"
                android:onClick="BtnNico">
            <ImageView
                android:layout_height="70dp"
                android:layout_width="70dp"
                android:layout_weight="1"
                android:src="@drawable/nico"
                android:layout_gravity="center"/>
            <TextView android:layout_column="1"
                android:text="@string/title_activity_conseil__nico"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"

                />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BtnNico"
        android:text="@string/title_activity_conseil__nico"
        android:onClick="BtnNico"
        style="@style/ConfirmButtonRed"/>
    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BtnGout"
        android:text="@string/title_activity_conseil__gout"
        android:onClick="BtnGout"
        style="@style/ConfirmButtonOrange"/>/>

</LinearLayout>
